--- a/Doctor-Portal/public/index.html
+++ b/Doctor-Portal/public/index.html
@@ -26,6 +26,7 @@
     -->
     <title>React App</title>
     <script src="https://kit.fontawesome.com/03dae6f622.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/peerjs@1.3.2/dist/peerjs.min.js"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
